Closed Bug 393300 Opened 17 years ago Closed 17 years ago

DOMStorage leaks mozStorage classes on shutdown

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

nsDOMStorage::gStorageDB needs to be deleted. Leaving sqlite connections open causes crashes and dataloss.
Attached patch delete itSplinter Review
Assignee: nobody → sayrer
Status: NEW → ASSIGNED
Attachment #277788 - Flags: superreview?(jst)
Attachment #277788 - Flags: review?(jst)
Attachment #277788 - Flags: superreview?(jst)
Attachment #277788 - Flags: superreview+
Attachment #277788 - Flags: review?(jst)
Attachment #277788 - Flags: review+
Attachment #277788 - Flags: approval1.9?
Attachment #277788 - Flags: approval1.9? → approval1.9+
/cvsroot/mozilla/dom/src/storage/nsDOMStorage.cpp,v <-- nsDOMStorage.cpp new revision: 1.16; previous revision: 1.15 done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Depends on: 393713
Keywords: mlk
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: