Bug 393300. DOMStorage leaks mozStorage classes on shutdown. r+sr+a=jst